--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <a href="#" class="logo">
         <ion-icon name="barbell-sharp" aria-hidden="true"></ion-icon>
 
-        <span class="span">YouFit</span>
+        <span class="span">YouFat</span>
       </a>
 
       <nav class="navbar" data-navbar>
